--- a/projects.qmd
+++ b/projects.qmd
@@ -7,7 +7,7 @@ format:
     css: styles.css
 ---
 
-This page highlights some of my work from classes and research. It includes data projects, fieldwork, and tools I’ve used.
+This page highlights some of my work from classes and research.
 
 ---
 
