--- a/index.qmd
+++ b/index.qmd
@@ -22,6 +22,6 @@ Feel free to wander, stay curious — and thanks for visiting.
 
 
 
-*This site is still evolving — kind of like everything else. Thanks for your patience!*
+*This site is still evolving. Thanks for your patience!*
 
 
