created modal.js to try to clean of styles.css - trying diff methods. also updated formatting of index and added actual index

--- a/projects.qmd
+++ b/projects.qmd
@@ -1,11 +1,14 @@
- ---
+---
 title: "Projects"
 format: 
   html:
     theme: darkly
     toc: false
     css: styles.css
+    includes:
+      after-body: modal.js
 ---
+
 
 
 This page highlights some of my work from classes and research.
