--- a/index.qmd
+++ b/index.qmd
@@ -1,29 +1,48 @@
 ---
 title: "Greetings!"
-website:
-  search:
-    location: footer
-    type: overlay
 format:
   html:
+    theme: darkly
     toc: false
+    css: styles.css
 about:
   template: marquee
   image: media/sci-sunset.jpeg
----
-:::{#hero-heading}
-
-Welcome to the digital habitat of Rebecca Martinez — where curiosity leads the way and muddy boots are just part of the journey.  
-
-This space is a growing collection of projects, fieldwork, adventures, and the occasional feline cameo. Whether it’s research, reflections, or unexpected detours, it’s all part of the exploration.
-
-Feel free to wander, stay curious — and thanks for visiting.
-:::
-
+website:
+  search:
+    location: footer
 ---
 
+Welcome to the digital habitat of **Rebecca Martinez* - where curiosity leads the way and muddy boots are just part of the journey.
+
+This site is a growing collection of projects, research, tutoring resources, adventure photos, and the occasional feline cameo.
 
 
+---
+
+## What you’ll find here:
+
+- **[About Me](about.qmd)**  
+  Learn a bit more about who I am and what drives me.
+
+- **[Resume & Experience](experience.qmd)**  
+  Check out my professional background and skills.
+
+- **[Projects](projects.qmd)**  
+  See what I’ve been working on — from class projects to research.
+
+- **[Resources](resources.qmd)**  
+  Educational recommendations and resources I’ve put together.
+
+- **[Photo Gallery](fieldphotos.qmd)**  
+  Browse photos from my adventures and explorations.
+
+- **[Cat Corner](cats.qmd)**  
+  Meet my feline friends and discover which cat matches your personality.
+
+---
+
+Feel free to wander, stay curious — and thanks for visiting!
 
 
 *This site is still evolving. Thanks for your patience!*
