played with differnt link styles and created style in css for clickable links to look like buttons

--- a/about.qmd
+++ b/about.qmd
@@ -3,7 +3,7 @@ title: "Meet Rebecca!"
 format: 
   html:
     theme: darkly
-    toc: false
+    toc: true
     css: styles.css
 about:
   template: solana
