updating resume and playing with formatting - tried callout. trying other options

--- a/experience.qmd
+++ b/experience.qmd
@@ -42,7 +42,7 @@ Environmental studies undergraduate with a strong background in mentorship and p
 *B.S. in Environmental Studies* | Expected 2026
 
 **Allan Hancock College** — Santa Maria, CA  
-- A.S. in Biology | Expected May 2024  
+- A.S. in Biology | May 2024  
 - A.A. in Biology | May 2023  
 - A.A. in Mathematics and Science | May 2021  
 - Information Technology Fundamentals (IT Certificate) | May 2024  
@@ -88,6 +88,10 @@ Environmental studies undergraduate with a strong background in mentorship and p
 - Developed staff schedules and ensured operational efficiency during peak times.  
 - Addressed guest concerns to maintain a positive and safe environment.
 
+*Security Officer* | June 2006 - June 2007  
+- Patrolled casino floor, staffed guard posts, and provided secure escorts.
+- Handled chip drops and safeguarded money movements across the property.
+
 ---
 
 ### Skills
@@ -105,7 +109,7 @@ Environmental studies undergraduate with a strong background in mentorship and p
 
 ### References
 
-*Please ask*
+*Available upon request.*
 
 
 </details>
